echo/013-echo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: echo
  name: echo
  namespace: echo
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: echo.mazdermind.de
    http:
      paths:
      - backend:
          serviceName: echo
          servicePort: echo
